<resources>
    <string name="app_name">DictionaryApp</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Dictionary</string>
    <string name="nav_note">Notes</string>
    <string name="nav_settings">Settings</string>
    <string name="search">DictionaryApp</string>
    <string name="general">General</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nave">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>