<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:title="@string/general">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:icon="@drawable/nav_home"
                    android:title="@string/nav_home"
                    android:id="@+id/home"/>

                <item
                    android:icon="@drawable/nav_note_pad"
                    android:title="@string/nav_note"
                    android:id="@+id/note"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/nav_settings">
        <menu>
            <item
                android:icon="@drawable/nav_settings"
                android:title="@string/nav_settings"
                android:id="@+id/settings"/>
            <item
                android:icon="@drawable/nav_about"
                android:title="@string/nav_about"
                android:id="@+id/about"/>
        </menu>
    </item>
</menu>